# OpenMythos

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Next.tasks.md  PROGRESS.md  Plans.md  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml  requirements.txt  tokyo_map_preview.html
benchmark/: compare_opus.py  growing_ai_bench.py  llmo_bench.py  lm_eval_harness.py  perplexity.py  project_dashboard.py  report.py  run_eval.py  throughput.py
benchmark_results/: bench_vs_transformer_cpu_2026-05-19.txt  decode_speed_cpu_2026-05-21.txt  hyperloop_vs_flat_cpu_2026-05-21.txt  small_benchmark_tinystories_2026-05-19.txt
data/: seo_train.jsonl
docs/: architecture.md  gcp_gpu_setup.md  learning-guide.md  mythos_vs_openmythos.md  operations.md
examples/: ad_demo.py  ad_openai_demo.py  api_quickstart.py  demo_seo_llmo.ipynb  moda_example.py  seo_two_phase_workflow.py
framework/: FRAMEWORK.md
open_mythos/: __init__.py  agents.py  assistant.py  cli.py  conversation.py  debate.py  ensemble_scorer.py  error_memory.py  external_signal.py  growing_ai_orchestrator.py  hermes_orchestrator.py  hyperloop.py  kpi_agent.py  llmo.py  llmo_adapt.py  llmo_feedback.py  llmo_growth.py  llmo_history.py  logger_utils.py  long_term_memory.py  lora_trainer.py  main.py  mod.py  moda.py  prefix_cache.py  profiler.py  prompt_evolution.py  rag.py  react.py  rope_extension.py  security.py  self_distill.py  seo_pipeline.py  streaming.py  structured.py  swarm.py  task_planner.py  thinking.py  tokenizer.py  tokenizer_ja.py  (+3 more)
results/: perplexity_vs_loops.csv
scripts/: bench_1b_vs_nano.py  csv_to_jsonl.py  eval_marketing.py  eval_perplexity.py  finetune.py  generate_seo.py  generate_seo_train.py  harness-mem-init.sh  preprocess.py  pretrain.py  pretrain_gcp.sh  quick_train.py  run_benchmark_comparison.py  run_seo_ft.py  train_dpo.py
serve/: Dockerfile  ab_router.py  ad_router.py  api.py  auth.py  chatwork_router.py  client_example.ts  cloudrun.env.example  dashboard.py  deploy_cloudrun.sh  map_router.py  monitor.py  sla_router.py
tests/: bench_vs_transformer.py  conftest.py  small_benchmark.py  test_hyperloop.py  test_integration.py  test_main.py  test_moda.py  test_sprint10.py  test_sprint11.py  test_sprint12.py  test_sprint13.py  test_sprint13_swarm.py  test_sprint15.py  test_sprint16.py  test_sprint17.py  test_sprint18.py  test_sprint19.py  test_sprint20.py  test_sprint21.py  test_sprint22.py  test_sprint23.py  test_sprint24.py  test_sprint25.py  test_sprint26.py  test_sprint27.py  test_sprint28.py  test_sprint29.py  test_sprint30.py  test_sprint31.py  (+62 more)
(+140 files in other folders)
