[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "open-mythos"
version = "0.57.0"
description = "OpenMythos — open-source theoretical reconstruction of the Claude Mythos Recurrent-Depth Transformer architecture"
license = "MIT"
authors = ["Kye Gomez <kye@swarms.world>"]
homepage = "https://github.com/The-Swarm-Corporation/OpenMythos"
documentation = "https://github.com/The-Swarm-Corporation/OpenMythos/blob/main/docs/open_mythos.md"
readme = "README.md"
repository = "https://github.com/The-Swarm-Corporation/OpenMythos"
keywords = [
    "artificial intelligence",
    "deep learning",
    "transformers",
    "recurrent transformers",
    "looped transformers",
    "mixture of experts",
    "multi-latent attention",
    "grouped query attention",
    "adaptive computation time",
    "recurrent depth transformer",
    "LTI stability",
    "inference-time scaling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
torch = "2.11.0"
transformers = ">=4.40.0"
datasets = ">=2.18.0"

[tool.poetry.scripts]
mythos = "open_mythos.cli:main"

[tool.poetry.extras]
flash = ["flash-attn"]
ja = ["janome", "fugashi"]

[tool.poetry.dependencies.flash-attn]
version = ">=2.8.3"
optional = true

[tool.poetry.dependencies.janome]
version = ">=0.5.0"
optional = true

[tool.poetry.dependencies.fugashi]
version = ">=1.3.0"
optional = true


[tool.poetry.group.lint.dependencies]
black = ">=23.1,<27.0"
ruff = ">=0.5.1,<0.15.9"


[tool.poetry.group.test.dependencies]
pytest = ">=8.1.1,<10.0.0"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"

[tool.ruff]
line-length = 88
exclude = ["examples/*.ipynb"]

[tool.ruff.lint]
# 本プロジェクトは意図的に縦揃え整形・1行文・lambda 代入等のスタイルを採用しており
# black も適用しない方針。純粋にスタイル的な以下の警告は無効化する。
# 実質的な問題 (F401 未使用 import / F811 再定義 / F821 未定義名 / F841 未使用変数 等)
# は引き続き検出する。
ignore = [
    "E401",  # multiple-imports-on-one-line
    "E402",  # module-import-not-at-top-of-file (遅延 / 条件付き import を許容)
    "E701",  # multiple-statements-on-one-line (colon)
    "E702",  # multiple-statements-on-one-line (semicolon)
    "E731",  # lambda-assignment
    "E741",  # ambiguous-variable-name
]

[tool.ruff.lint.per-file-ignores]
"examples/*.ipynb" = ["E402"]
